# Pipeline-Classification-MLOps

./: .gitattributes  README.md  dockerfile  pyproject.toml  requirements.txt
Pipeline-Classification-MLOps/: .dockerignore  .gitignore  Makefile  README.md  requirements.txt  run_training.py  test_setup.py
Pipeline-Classification-MLOps/API/: main.py
Pipeline-Classification-MLOps/models/: image_classifier_model.keras
Pipeline-Classification-MLOps/models/huggingFace/text-classifier-ag-news-distilbert/: model.safetensors
Pipeline-Classification-MLOps/notebooks/: 01-image-data-exploration.ipynb
Pipeline-Classification-MLOps/src/: data_utils.py  model_architecture.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/huggingFace/text-classifier-ag-news-distilbert/: config.json
notebooks/: Classification_texte_huginface.ipynb  classificationMulti_Class.ipynb
